--- a/manifold_heater.html
+++ b/manifold_heater.html
@@ -40,6 +40,10 @@
 </head>
 
 <body>
+    <div class="loader_bg">
+        <div class="loader"><img src="images/loading/loading2.gif" alt="#" /></div>
+
+    </div>
     <header>
         <!-- header inner -->
         <div class="header">
@@ -189,11 +193,12 @@
                     <div class="col-xl-3 col-lg-3 col-md-6 col-sm-6">
                         <img class="logo1" src="pics/output-onlinepngtools.png" alt="#" />
                         <ul class="social_icon">
-                            <li><a href="https://www.facebook.com/profile.php?id=61561711485935">Facebook</a></li><br>
-                            <!-- <li><a href="https://www.facebook.com/profile.php?id=61561711485935"><i
-                              aria-hidden="true">Facebook</i></a></li> -->
-                            <li><a href="http://www.linkedin.com/in/smaj-industries">LinkedIn</a></li><br>
-                            <li><a href="https://www.instagram.com/smajheaters">Instagram</a></li>
+                            <li><a href="https://www.facebook.com/profile.php?id=61561711485935"><i
+                                        class="fa fa-facebook" aria-hidden="true"></i></a></li>
+                            <li><a href="http://www.linkedin.com/in/smaj-industries"><i class="fa fa-linkedin-square"
+                                        aria-hidden="true"></i></a></li>
+                            <li><a href="https://www.instagram.com/smajheaters"><i class="fa fa-instagram"
+                                        aria-hidden="true"></i></a></li>
                         </ul>
                     </div>
                     <div class="col-xl-3 col-lg-3 col-md-6 col-sm-6">
@@ -212,7 +217,8 @@
                                 <strong>Unit II</strong> : 8 Landmark Ind. Estate, Near Blue Chip,
                                 Waliv Phata Sativalli Road, Vasai (E), Dist:- Palghar 401208 <br>
                                 <strong>Call or whatsapp </strong>: +91-9820484156, 9892908010, 9769933505<br>
-                                <strong>Email us on</strong> : admin@smajheaters.com<br>
+                                <strong>Email us on</strong> : <a href="mailto:admil@smajheaters.com"
+                                    style="color: white;">admin@smajheaters.com</a><br>
                             </li>
                         </ul>
                     </div>
