--- a/micro_tubular_coil_heater.html
+++ b/micro_tubular_coil_heater.html
@@ -40,6 +40,10 @@
 </head>
 
 <body>
+    <div class="loader_bg">
+      <div class="loader"><img src="images/loading/loading2.gif" alt="#" /></div>
+      
+   </div>
     <header>
         <!-- header inner -->
         <div class="header">
@@ -161,13 +165,13 @@
                             with protective earth conductor lead.<br><br>
 
                             <strong> Specifications: </strong><br>
-                            Max. Sheath Temperature 750 ° C / 1380 ° F<br>
-                            Insulation Resistance ≥ 5 MΏ at 500V (DC)<br>
-                            Length Tolerance ± 5%<br>
-                            Thermocouple Type J / K<br>
-                            Diameter Tolerance ± 0.15 mm<br>
+                            Max. Sheath Temperature	750 ° C / 1380 ° F<br>
+                            Insulation Resistance	≥ 5 MΏ at 500V (DC)<br>
+                            Length Tolerance	± 5%<br>
+                            Thermocouple	Type J / K<br>
+                            Diameter Tolerance	± 0.15 mm<br>
                             Voltage Range: 24 to 250 volts<br>
-                            Wattage ± 10 %<br>
+                            Wattage	± 10 %<br>
                             Standard Wattage: 250W, 330W, 400W, 470W, 550W, 650W, 750W, 850W, 1000W, 1100W<br>
                             Connection Wires: 1000 mm Stranded Nickel wires with PTFE coating<br>
                             Available Cross Sections (in mm):<br>
@@ -210,11 +214,12 @@
                     <div class="col-xl-3 col-lg-3 col-md-6 col-sm-6">
                         <img class="logo1" src="pics/output-onlinepngtools.png" alt="#" />
                         <ul class="social_icon">
-                            <li><a href="https://www.facebook.com/profile.php?id=61561711485935">Facebook</a></li><br>
-                            <!-- <li><a href="https://www.facebook.com/profile.php?id=61561711485935"><i
-                              aria-hidden="true">Facebook</i></a></li> -->
-                            <li><a href="http://www.linkedin.com/in/smaj-industries">LinkedIn</a></li><br>
-                            <li><a href="https://www.instagram.com/smajheaters">Instagram</a></li>
+                            <li><a href="https://www.facebook.com/profile.php?id=61561711485935"><i
+                                        class="fa fa-facebook" aria-hidden="true"></i></a></li>
+                            <li><a href="http://www.linkedin.com/in/smaj-industries"><i class="fa fa-linkedin-square"
+                                        aria-hidden="true"></i></a></li>
+                            <li><a href="https://www.instagram.com/smajheaters"><i class="fa fa-instagram"
+                                        aria-hidden="true"></i></a></li>
                         </ul>
                     </div>
                     <div class="col-xl-3 col-lg-3 col-md-6 col-sm-6">
@@ -230,10 +235,10 @@
                         <ul class="conta">
                             <li><strong>Unit I</strong> : 3rd Feku Yadav Comp., Bandivali Hill Road
                                 Jogeshwari (W) Mumbai 400102<br>
-                                <strong>Unit II</strong> : 8 Landmark Ind. Estate, Near Blue Chip,
-                                Waliv Phata Sativalli Road, Vasai (E), Dist:- Palghar 401208 <br>
+                                <strong>Unit II</strong> : 8 Landmark Ind. Estate, Near Blue Chip, 
+                                Waliv Phata Sativalli Road, Vasai (E), Dist:- Palghar  401208 <br>
                                 <strong>Call or whatsapp </strong>: +91-9820484156, 9892908010, 9769933505<br>
-                                <strong>Email us on</strong> : admin@smajheaters.com<br>
+                                <strong>Email us on</strong> : <a href="mailto:admil@smajheaters.com" style="color: white;">admin@smajheaters.com</a><br>
                             </li>
                         </ul>
                     </div>
