--- a/tubular_heater.html
+++ b/tubular_heater.html
@@ -40,6 +40,10 @@
 </head>
 
 <body>
+  <div class="loader_bg">
+      <div class="loader"><img src="images/loading/loading2.gif" alt="#" /></div>
+      
+   </div>
   <header>
     <!-- header inner -->
     <div class="header">
@@ -104,7 +108,13 @@
                   <img src="products/Tubular Heater/images/th2.jpg" />
                 </li>
                 <li>
+                  <img src="products/Tubular Heater/images/th3.png" />
+                </li>
+                <li>
                   <img src="products/Tubular Heater/images/th4.png" />
+                </li>
+                <li>
+                  <img src="products/Tubular Heater/images/th5.jpg" />
                 </li>
                 
                 <!-- items mirrored twice, total of 12 -->
@@ -119,7 +129,13 @@
                   <img src="products/Tubular Heater/pics/th2.jpg" />
                 </li>
                 <li>
+                  <img src="products/Tubular Heater/pics/th3.png" />
+                </li>
+                <li>
                   <img src="products/Tubular Heater/pics/th4.png" />
+                </li>
+                <li>
+                  <img src="products/Tubular Heater/pics/th5.jpg" />
                 </li>
                 <!-- items mirrored twice, total of 12 -->
               </ul>
