--- a/coil_nozzle_heater.html
+++ b/coil_nozzle_heater.html
@@ -40,6 +40,10 @@
 </head>
 
 <body>
+  <div class="loader_bg">
+      <div class="loader"><img src="images/loading/loading2.gif" alt="#" /></div>
+      
+   </div>
   <header>
     <!-- header inner -->
     <div class="header">
@@ -185,11 +189,12 @@
              <div class="col-xl-3 col-lg-3 col-md-6 col-sm-6">
                 <img class="logo1" src="pics/output-onlinepngtools.png" alt="#" />
                 <ul class="social_icon">
-                  <li><a href="https://www.facebook.com/profile.php?id=61561711485935">Facebook</a></li><br>
-                  <!-- <li><a href="https://www.facebook.com/profile.php?id=61561711485935"><i
-                           aria-hidden="true">Facebook</i></a></li> -->
-                  <li><a href="http://www.linkedin.com/in/smaj-industries">LinkedIn</a></li><br>
-                  <li><a href="https://www.instagram.com/smajheaters">Instagram</a></li>
+                   <li><a href="https://www.facebook.com/profile.php?id=61561711485935"><i class="fa fa-facebook"
+                            aria-hidden="true"></i></a></li>
+                   <li><a href="http://www.linkedin.com/in/smaj-industries"><i class="fa fa-linkedin-square"
+                            aria-hidden="true"></i></a></li>
+                   <li><a href="https://www.instagram.com/smajheaters"><i class="fa fa-instagram"
+                            aria-hidden="true"></i></a></li>
                 </ul>
              </div>
              <div class="col-xl-3 col-lg-3 col-md-6 col-sm-6">
