--- a/contact.html
+++ b/contact.html
@@ -1,157 +1,155 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-   <!-- basic -->
-   <meta charset="utf-8">
-   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-   <!-- mobile metas -->
-   <meta name="viewport" content="width=device-width, initial-scale=1">
-   <meta name="viewport" content="initial-scale=1, maximum-scale=1">
-   <!-- site metas -->
-   <title>Connect to SMAJ</title>
-   <meta name="keywords" content="">
-   <meta name="description" content="">
-   <meta name="author" content="">
-   <!-- bootstrap css -->
-   <link rel="stylesheet" href="css/bootstrap.min.css">
-   <!-- style css -->
-   <link rel="stylesheet" href="css/style.css">
-   <!-- Responsive-->
-   <link rel="stylesheet" href="css/responsive.css">
-   <!-- fevicon -->
-   <link rel="icon" href="images/fevicon.png" type="image/gif" />
-   <!-- Scrollbar Custom CSS -->
-   <link rel="stylesheet" href="css/jquery.mCustomScrollbar.min.css">
-   <!-- Tweaks for older IEs-->
-   <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css">
-   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.css"
-      media="screen">
-   <!--[if lt IE 9]>
+   <head>
+      <!-- basic -->
+      <meta charset="utf-8">
+      <meta http-equiv="X-UA-Compatible" content="IE=edge">
+      <!-- mobile metas -->
+      <meta name="viewport" content="width=device-width, initial-scale=1">
+      <meta name="viewport" content="initial-scale=1, maximum-scale=1">
+      <!-- site metas -->
+      <title>Connect to SMAJ</title>
+      <meta name="keywords" content="">
+      <meta name="description" content="">
+      <meta name="author" content="">
+      <!-- bootstrap css -->
+      <link rel="stylesheet" href="css/bootstrap.min.css">
+      <!-- style css -->
+      <link rel="stylesheet" href="css/style.css">
+      <!-- Responsive-->
+      <link rel="stylesheet" href="css/responsive.css">
+      <!-- fevicon -->
+      <link rel="icon" href="images/fevicon.png" type="image/gif" />
+      <!-- Scrollbar Custom CSS -->
+      <link rel="stylesheet" href="css/jquery.mCustomScrollbar.min.css">
+      <!-- Tweaks for older IEs-->
+      <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css">
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.css" media="screen">
+      <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script><![endif]-->
-</head>
-<!-- body -->
-
-<body class="main-layout inner_posituong contact_page">
-   <!-- header -->
-   <header>
-      <!-- header inner -->
-      <div class="header">
-         <div class="container-fluid">
-            <div class="row" style="background-color: rgb(30, 36, 38);">
-               <div class="col-xl-3 col-lg-3 col-md-3 col-sm-3 col logo_section">
-                  <div class="full">
-                     <div class="center-desk">
-                        <div class="logo">
-                           <a href="index.html"><img src="pics/output-onlinepngtools.png" alt="#" /></a>
+   </head>
+   <!-- body -->
+   <body class="main-layout inner_posituong contact_page">
+      
+      <!-- loader  -->
+      <div class="loader_bg">
+         <div class="loader"><img src="images/loading/loading2.gif" alt="#" /></div>
+      </div>
+      <!-- end loader -->
+      <!-- header -->
+      <header>
+         <!-- header inner -->
+         <div class="header">
+            <div class="container-fluid">
+               <div class="row" style="background-color: rgb(30, 36, 38);">
+                  <div class="col-xl-3 col-lg-3 col-md-3 col-sm-3 col logo_section">
+                     <div class="full">
+                        <div class="center-desk">
+                           <div class="logo">
+                              <a href="index.html"><img src="pics/output-onlinepngtools.png" alt="#" /></a>
+                           </div>
                         </div>
                      </div>
                   </div>
-               </div>
-               <div class="col-xl-9 col-lg-9 col-md-9 col-sm-9">
-                  <nav class="navigation navbar navbar-expand-md navbar-dark ">
-                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample04"
-                        aria-controls="navbarsExample04" aria-expanded="false" aria-label="Toggle navigation">
+                  <div class="col-xl-9 col-lg-9 col-md-9 col-sm-9">
+                     <nav class="navigation navbar navbar-expand-md navbar-dark ">
+                        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample04" aria-controls="navbarsExample04" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
-                     </button>
-                     <div class="collapse navbar-collapse" id="navbarsExample04">
-                        <ul class="navbar-nav mr-auto">
-                           <li class="nav-item">
-                              <a class="nav-link" href="index.html">Home</a>
-                           </li>
-                           <li class="nav-item">
-                              <a class="nav-link" href="product.html">Products</a>
-                           </li>
-                           <li class="nav-item">
-                              <a class="nav-link" href="about.html">About</a>
-                           </li>
-                           <li class="nav-item active">
-                              <a class="nav-link" href="contact.html">Contact Us</a>
-                           </li>
-                        </ul>
-                     </div>
-                  </nav>
-               </div>
-            </div>
-         </div>
-      </div>
-   </header>
-   <!-- end header inner -->
-   <!-- end header -->
-   <!--  contact -->
-   <div class="contact">
-      <div class="container">
-         <div class="row">
-            <div class="col-md-12">
-               <div class="titlepage">
-                  <h2>Contact Now</h2>
-               </div>
-            </div>
-         </div>
-         <div class="row">
-            <div class="col-md-10 offset-md-1">
-               <form id="request" class="main_form" action="https://api.web3forms.com/submit" method="POST">
-                  <div class="row">
-                     <input type="hidden" name="access_key" value="ae97b96c-e6d1-49c9-a6e5-65cbacdfa7be">
-                     <div class="col-md-12 ">
-                        <input class="contactus" placeholder="Name" name="name" required>
-                        <input type="hidden" name="from_name" value="New Enquiry">
-                     </div>
-                     <div class="col-md-12">
-                        <input class="contactus" placeholder="Email" name="email" required>
-                     </div>
-                     <div class="col-md-12">
-                        <input class="contactus" placeholder="Phone Number" name="Phone Number" required>
-                     </div>
-                     <div class="col-md-12">
-                        <textarea class="textarea" placeholder="Product name and your message"
-                           name="message"></textarea>
-                     </div>
-                     <div class="col-md-12">
-                        <button class="send_btn">Send</button>
-                     </div>
+                        </button>
+                        <div class="collapse navbar-collapse" id="navbarsExample04">
+                           <ul class="navbar-nav mr-auto">
+                              <li class="nav-item">
+                                 <a class="nav-link" href="index.html">Home</a>
+                              </li>
+                              <li class="nav-item">
+                                 <a class="nav-link" href="product.html">Products</a>
+                              </li>
+                              <li class="nav-item">
+                                 <a class="nav-link" href="about.html">About</a>
+                              </li>
+                              <li class="nav-item active">
+                                 <a class="nav-link" href="contact.html">Contact Us</a>
+                              </li>
+                           </ul>
+                        </div>
+                     </nav>
                   </div>
-               </form>
+               </div>
             </div>
          </div>
-      </div>
-   </div>
-   <!-- end contact -->
-   <!--  footer -->
-   <footer>
-      <div class="footer">
+      </header>
+      <!-- end header inner -->
+      <!-- end header -->
+      <!--  contact -->
+      <div class="contact">
          <div class="container">
             <div class="row">
-               <div class="col-xl-3 col-lg-3 col-md-6 col-sm-6">
-                  <img class="logo1" src="pics/output-onlinepngtools.png" alt="#" />
-                  <ul class="social_icon">
-                     <li><a href="https://www.facebook.com/profile.php?id=61561711485935">Facebook</a></li><br>
-                     <!-- <li><a href="https://www.facebook.com/profile.php?id=61561711485935"><i
-                              aria-hidden="true">Facebook</i></a></li> -->
-                     <li><a href="http://www.linkedin.com/in/smaj-industries">LinkedIn</a></li><br>
-                     <li><a href="https://www.instagram.com/smajheaters">Instagram</a></li>
-                  </ul>
+               <div class="col-md-12">
+                  <div class="titlepage">
+                     <h2>Contact Now</h2>
+                  </div>
                </div>
-               <div class="col-xl-3 col-lg-3 col-md-6 col-sm-6">
-                  <h3>About Us</h3>
-                  <ul class="about_us">
-                     <li>SMAJ Industries<br> manufactures high-quality heaters and sensors<br> emphasizing innovation,
-                        client-centric approaches,<br> and timely delivery.</li>
-                  </ul>
+            </div>
+            <div class="row">
+               <div class="col-md-10 offset-md-1">
+                  <form id="request" class="main_form" action="https://api.web3forms.com/submit" method="POST">
+                     <div class="row">
+                        <input type="hidden" name="access_key" value="ae97b96c-e6d1-49c9-a6e5-65cbacdfa7be">
+                        <div class="col-md-12 ">
+                           <input class="contactus" placeholder="Name" name="name" required>
+                           <input type="hidden" name="from_name" value="New Enquiry">
+                        </div>
+                        <div class="col-md-12">
+                           <input class="contactus" placeholder="Email" name="email" required>                          
+                        </div>
+                        <div class="col-md-12">
+                           <input class="contactus" placeholder="Phone Number" name="Phone Number" required>                          
+                        </div>
+                        <div class="col-md-12">
+                           <textarea class="textarea" placeholder="Product name and your message" name="message"></textarea>
+                        </div>
+                        <div class="col-md-12">
+                           <button class="send_btn">Send</button>
+                        </div>
+                     </div>
+                  </form>
                </div>
-               <div class="col-md-6 col-sm-6">
-                  <h3>Contact Us</h3>
-                  <ul class="conta">
-                     <li><strong>Unit I</strong> : 3rd Feku Yadav Comp., Bandivali Hill Road
-                        Jogeshwari (W) Mumbai 400102<br>
-                        <strong>Unit II</strong> : 8 Landmark Ind. Estate, Near Blue Chip,
-                        Waliv Phata Sativalli Road, Vasai (E), Dist:- Palghar 401208 <br>
-                        <strong>Call or whatsapp </strong>: +91-9820484156, 9892908010, 9769933505<br>
-                        <strong>Email us on</strong> : admin@smajheaters.com<br>
-                     </li>
-                  </ul>
-               </div>
+            </div>
+         </div>
+      </div>
+      <!-- end contact -->
+      <!--  footer -->
+      <footer>
+         <div class="footer">
+            <div class="container">
+               <div class="row">
+                  <div class="col-xl-3 col-lg-3 col-md-6 col-sm-6">
+                     <img class="logo1" src="pics/output-onlinepngtools.png" alt="#"/>
+                     <ul class="social_icon">
+                        <li><a href="https://www.facebook.com/profile.php?id=61561711485935"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+                        <li><a href="http://www.linkedin.com/in/smaj-industries"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a></li>
+                        <li><a href="https://www.instagram.com/smajheaters"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+                     </ul>
+                  </div>
+                  <div class="col-xl-3 col-lg-3 col-md-6 col-sm-6">
+                     <h3>About Us</h3>
+                     <ul class="about_us">
+                        <li>SMAJ Industries<br> manufactures high-quality heaters and sensors<br> emphasizing innovation, client-centric approaches,<br> and timely delivery.</li>
+                     </ul>
+                  </div>
+                  <div class="col-md-6 col-sm-6">
+                     <h3>Contact Us</h3>
+                     <ul class="conta">
+                        <li><strong>Unit I</strong> : 3rd Feku Yadav Comp., Bandivali Hill Road
+                           Jogeshwari (W) Mumbai 400102<br>
+                           <strong>Unit II</strong> : 8 Landmark Ind. Estate, Near Blue Chip, 
+                           Waliv Phata Sativalli Road, Vasai (E), Dist:- Palghar  401208 <br>
+                           <strong>Call or whatsapp </strong>: +91-9820484156, 9892908010, 9769933505<br>
+                           <strong>Email us on</strong> : <a href="mailto:admil@smajheaters.com" style="color: white;">admin@smajheaters.com</a><br>
+                        </li>
+                     </ul>
+                  </div>
             </div>
             <div class="copyright">
                <div class="container">
@@ -163,16 +161,16 @@
                </div>
             </div>
          </div>
-   </footer>
-   <!-- end footer -->
-   <!-- Javascript files-->
-   <script src="js/jquery.min.js"></script>
-   <script src="js/popper.min.js"></script>
-   <script src="js/bootstrap.bundle.min.js"></script>
-   <script src="js/jquery-3.0.0.min.js"></script>
-   <!-- sidebar -->
-   <script src="js/jquery.mCustomScrollbar.concat.min.js"></script>
-   <script src="js/custom.js"></script>
-</body>
-
+      </footer>
+      <!-- end footer -->
+      <!-- Javascript files-->
+      <script src="js/jquery.min.js"></script>
+      <script src="js/popper.min.js"></script>
+      <script src="js/bootstrap.bundle.min.js"></script>
+      <script src="js/jquery-3.0.0.min.js"></script>
+      <!-- sidebar -->
+      <script src="js/jquery.mCustomScrollbar.concat.min.js"></script>
+      <script src="js/custom.js"></script>
+   </body>
 </html>
+
