--- a/brass_pressed_heater.html
+++ b/brass_pressed_heater.html
@@ -16,7 +16,7 @@
     <!-- Responsive-->
     <link rel="stylesheet" href="css/responsive.css">
     <!-- fevicon -->
-    <link rel="icon" href="images/fevicon.png" type="image/gif" />
+    <!-- <link rel="icon" href="images/fevicon.png" type="image/gif" /> -->
     <!-- Scrollbar Custom CSS -->
     <link rel="stylesheet" href="css/jquery.mCustomScrollbar.min.css">
     <!-- Tweaks for older IEs-->
@@ -25,17 +25,13 @@
         media="screen">
     
     <!-- Additional CSS Files -->
-    <!-- <link rel="stylesheet" href="css/fontawesome.css"> -->
+    <link rel="stylesheet" href="css/fontawesome.css">
     <link rel="stylesheet" href="css/tooplate-main.css">
     <link rel="stylesheet" href="css/flex-slider.css">
 
 </head>
 
 <body>
-    <div class="loader_bg">
-      <div class="loader"><img src="images/loading/loading2.gif" alt="#" /></div>
-      
-   </div>
     <header>
         <!-- header inner -->
         <div class="header">
